--- a/calendar.html
+++ b/calendar.html
@@ -41,13 +41,13 @@
           >
         </li>
         <li class="nav-item">
-          <a href="calendar.html" class="nav-link"
+          <a href="calendar.html" class="nav-link active"
             ><i class="fas fa-calendar"></i>
             <span class="text-white">Calendario</span></a
           >
         </li>
         <li class="nav-item">
-          <a href="register.html" class="nav-link active"
+          <a href="register.html" class="nav-link"
             ><i class="fas fa-arrow-right"></i>
             <span class="text-white">Registro</span></a
           >
@@ -64,33 +64,7 @@
     <main>
       <div class="login-container">
         <div class="login-box">
-          <h2>Registrate</h2>
-          <form>
-            <div class="user-box">
-              <input type="text" name="" required="" />
-              <label>Nombre De Usuario</label>
-            </div>
-            <div class="user-box">
-              <input type="email" name="" required="" />
-              <label>Correo</label>
-            </div>
-            <div class="user-box">
-              <input type="password" name="" required="" />
-              <label>Contraseña</label>
-            </div>
-            <div class="user-box">
-              <input type="password" name="" required="" />
-              <label>Confirmar Contraseña</label>
-            </div>
-
-            <a href="#">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              Enviar
-            </a>
-          </form>
+          <h2>Calendario</h2>
         </div>
       </div>
     </main>
