--- a/login.html
+++ b/login.html
@@ -9,74 +9,121 @@
       name="keyboards"
       content="Calendario, Eventos, Agenda, Organizacion"
     />
-    <!-- En keyboards se colocan las palabras claves de como quieren que encuentren tu pagina en el buscador -->
-    <link rel="icon" type="image/svg+xml" href="/calendar.svg" />
+
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Agenda De Eventos - PSP 19</title>
+    <title>Agenda PSP</title>
   </head>
 
-  <header
-    class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-  >
-    <a
-      href="/"
-      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none"
+  <body class="w-full">
+    <!-- NAVBAR -->
+    <header
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom px-5"
+      style="background-color: #43afee"
     >
-      <span class="fs-4"
-        ><i class="fas fa-shoe-prints"></i> Agenda De Eventos</span
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none text-bold"
       >
-    </a>
+        <span class="fs-4 fw-bold"
+          ><i class="fa fa-calendar"></i> Agenda PSP</span
+        >
+      </a>
 
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a href="index.html" class="nav-link" aria-current="page"
-          ><i class="fas fa-home"></i> Inicio</a
-        >
-      </li>
-      <!-- Los <i> son para colocar el icono -->
-      <li class="nav-item">
-        <a href="" class="nav-link"
-          ><i class="fa-regular fa-calendar-days"></i> Calendario</a
-        >
-      </li>
-      <li class="nav-item">
-        <a href="register.html" class="nav-link"
-          ><i class="fas fa-truck"></i> Registrate</a
-        >
-      </li>
-      <li class="nav-item">
-        <a href="login.html" class="nav-link active"
-          ><i class="fas fa-concierge-bell"></i> Iniciar Sesion</a
-        >
-      </li>
-    </ul>
-  </header>
+      <ul class="nav nav-pills fs-6 fw-bold">
+        <li class="nav-item">
+          <a href="/" class="nav-link" aria-current="page"
+            ><i class="fas fa-home"></i>
+            <span class="text-white">Inicio</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="calendar.html" class="nav-link"
+            ><i class="fas fa-calendar"></i>
+            <span class="text-white">Calendario</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="register.html" class="nav-link"
+            ><i class="fas fa-arrow-right"></i>
+            <span class="text-white">Registro</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="login.html" class="nav-link active"
+            ><i class="fas fa-user"></i>
+            <span class="text-white">Ingresar</span></a
+          >
+        </li>
+      </ul>
+    </header>
+    <!-- BODY -->
+    <main>
+      <div class="login-container">
+        <div class="login-box">
+          <h2>Iniciar Sesión</h2>
+          <form>
+            <div class="user-box">
+              <input type="text" name="" required="" />
+              <label>Nombre De Usuario</label>
+            </div>
+            <div class="user-box">
+              <input type="email" name="" required="" />
+              <label>Correo</label>
+            </div>
 
-  <body>
-    <div class="login-box">
-      <h2>Iniciar Sesion</h2>
-      <form>
-        <div class="user-box">
-          <input type="text" name="" required="" />
-          <label>Nombre De Usuario</label>
+            <a href="#">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              Enviar
+            </a>
+          </form>
         </div>
-        <div class="user-box">
-          <input type="email" name="" required="" />
-          <label>Correo</label>
-        </div>
+      </div>
+    </main>
+    <!-- FOOTER -->
+    <footer
+      class="row py-4 d-flex justify-content-between text-dark mt-5 px-5 fs-5 text-white"
+      style="background-color: #43afee; width: 100.5%"
+    >
+      <div class="col-12 col-md-4">
+        <ul class="list-unstyled">
+          <li>
+            <i class="fas fa-map-marked-alt"></i> Sede Politécnico Gran
+            Colombiano
+          </li>
+          <li><i class="fas fa-city"></i> Medellín-Bogotá</li>
+          <li><i class="fas fa-phone-alt"></i> Subgrupo 19</li>
+        </ul>
+      </div>
 
-        <a href="#">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          Enviar
-        </a>
-      </form>
-    </div>
+      <div class="col-12 col-md-4 text-center fs-5 fw-bold">
+        <h5>Comunícate con nosotros</h5>
+        <ul class="list-unstyled d-flex justify-content-center mt-3">
+          <li style="margin-right: 20px">
+            <a href="https://twitter.com/?lang=es" class="text-white"
+              ><i class="fab fa-twitter-square fa-2x mr-3"></i
+            ></a>
+          </li>
+          <li style="margin-right: 20px">
+            <a href="https://www.facebook.com/" class="text-white"
+              ><i class="fab fa-facebook fa-2x mr-3"></i
+            ></a>
+          </li>
+          <li style="margin-right: 20px">
+            <a href="https://www.instagram.com/?hl=es" class="text-white"
+              ><i class="fab fa-instagram-square fa-2x"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
