--- a/calendar.html
+++ b/calendar.html
@@ -41,19 +41,19 @@
           >
         </li>
         <li class="nav-item">
-          <a href="calendar.html" class="nav-link active"
+          <a href="/calendar.html" class="nav-link active"
             ><i class="fas fa-calendar"></i>
             <span class="text-white">Calendario</span></a
           >
         </li>
         <li class="nav-item">
-          <a href="register.html" class="nav-link"
+          <a href="/register.html" class="nav-link"
             ><i class="fas fa-arrow-right"></i>
             <span class="text-white">Registro</span></a
           >
         </li>
         <li class="nav-item">
-          <a href="login.html" class="nav-link"
+          <a href="/login.html" class="nav-link"
             ><i class="fas fa-user"></i>
             <span class="text-white">Ingresar</span></a
           >
