--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       style="background-color: #43afee"
     >
       <a
-        href="/"
+        href="index.html"
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none text-bold"
       >
         <span class="fs-4 fw-bold"
@@ -32,7 +32,7 @@
 
       <ul class="nav nav-pills fs-6 fw-bold">
         <li class="nav-item">
-          <a href="/" class="nav-link active" aria-current="page"
+          <a href="index.html" class="nav-link active" aria-current="page"
             ><i class="fas fa-home"></i> Inicio</a
           >
         </li>
