--- a/calendar.html
+++ b/calendar.html
@@ -25,7 +25,7 @@
       style="background-color: #43afee"
     >
       <a
-        href="/"
+        href="index.html"
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none text-bold"
       >
         <span class="fs-4 fw-bold"
@@ -35,7 +35,7 @@
 
       <ul class="nav nav-pills fs-6 fw-bold">
         <li class="nav-item">
-          <a href="/" class="nav-link" aria-current="page"
+          <a href="index.html" class="nav-link" aria-current="page"
             ><i class="fas fa-home"></i>
             <span class="text-white">Inicio</span></a
           >
