--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="carousel-item active">
                 <div
                   class="carousel-image"
-                  style="background-image: url('/slide1.jpg')"
+                  style="background-image: url('./public/slide1.jpg')"
                 ></div>
                 <div
                   class="carousel-caption d-none d-md-block"
@@ -111,7 +111,7 @@
               <div class="carousel-item">
                 <div
                   class="carousel-image"
-                  style="background-image: url('/slide3.jpg')"
+                  style="background-image: url('./public/slide3.jpg')"
                 ></div>
                 <div
                   class="carousel-caption d-none d-md-block"
@@ -129,7 +129,7 @@
               <div class="carousel-item">
                 <div
                   class="carousel-image"
-                  style="background-image: url('/slide2.jpg')"
+                  style="background-image: url('./public/slide2.jpg')"
                 ></div>
                 <div
                   class="carousel-caption d-none d-md-block"
