--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none text-bold"
       >
         <span class="fs-4 fw-bold"
-          ><i class="fa fa-calendar"></i> Agenda PSP</span
+          ><i class="fa fa-calendar"></i> Agenda PSP1</span
         >
       </a>
 
