--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
       name="keyboards"
       content="Calendario, Eventos, Agenda, Organizacion"
     />
-
+    <link rel="icon" type="image/svg+xml" href="./public/calendar.svg" />
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
