--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/calendar.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/calendar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Calendario De Eventos" />
     <meta
@@ -26,7 +26,7 @@
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none text-bold"
       >
         <span class="fs-4 fw-bold"
-          ><i class="fa fa-calendar"></i> Agenda PSP1</span
+          ><i class="fa fa-calendar"></i> Agenda PSP</span
         >
       </a>
 
